# docs/swagger.json
@@ -281,8 +281,8 @@
                 "summary": "Save Prompt",
                 "parameters": [
                     {
-                        "description": "Upload the prompt in the Db",
-                        "name": "UploadExcel",
+                        "description": "Add the prompt in the Db",
+                        "name": "Prompt",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -320,7 +320,7 @@
                     },
                     {
                         "description": "Update the prompt in the Db",
-                        "name": "UploadExcel",
+                        "name": "Prompt",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -356,6 +356,37 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/models.UploadRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ApplicationResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/initializ/v1/ai/user/delete": {
+            "delete": {
+                "description": "Delete Users by their Ids",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "UserData Apis"
+                ],
+                "summary": "Delete Users",
+                "parameters": [
+                    {
+                        "description": "userid",
+                        "name": "UserId",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Users"
                         }
                     }
                 ],
@@ -447,6 +478,17 @@
             "properties": {
                 "file_data": {
                     "type": "string"
+                }
+            }
+        },
+        "models.Users": {
+            "type": "object",
+            "properties": {
+                "user_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
