# routes/userdetails_routes.go
@@ -13,4 +13,5 @@ func UserDataRouter(router *gin.Engine) {
 	painPonitsRepo := config.GetRepoCollection("PainPoints")
 	router.POST("/initializ/v1/ai/upload", controllers.UploadExcel(userDataRepo, promptRepo, painPonitsRepo))
 	router.GET("/initializ/v1/ai/allusers", controllers.GetAllUserData(userDataRepo))
+	router.DELETE("initializ/v1/ai/user/delete", controllers.DeleteUserDetails(userDataRepo))
 }
